Created class FruitBox, which stores different kinds of Fruits. Added methods: possibility to add fruits to the box, method that calculating the weight of the box, method that compares weights of two different boxes, method to move fruits from one box to another.